Add token resources
